--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.18",
     "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.0.2",
     "typescript": "3.5.3"
