--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.9.0",
+    "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
     "typescript": "3.5.3"
   }
