--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
+    "tslint": "^5.19.0",
     "typescript": "3.5.3"
   }
 }
